MMA-8741 Betre feilmelding og http-statuskode dersom arkivsak er avslutta
Dersom det ikkje ligg saker i arkivsaka blir det no returnert not_found. Er nokre/alle sakene avslutta/avbrotne/avleverte blir det returnert conflict.